--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,3 +1,7 @@
 <div class="d-flex align-items-center justify-content-center ">
     <h1 class="text-success">Welcome to the Scheduled Tweet</h1>
 </div>
+    
+<% if @user %>
+    <div>Logged in as: <%= @user.email %> </div>
+<% end %>
