--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -4,4 +4,6 @@
     
 <% if @user %>
     <div>Logged in as: <%= @user.email %> </div>
+    <%= button_to "Logout", logout_path, method: :delete %>
 <% end %>
+
